# python-coralogix-sdk

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  LICENSE  LICENSE.python  MANIFEST.in  Makefile  README.rst  meta.yaml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml
coralogix/: __init__.py  constants.py  coralogix_logger.py  http.py  manager.py
coralogix/handlers/: __init__.py  coralogix.py  debug.py
coralogix/tests/: __init__.py  test_constants.py  test_coralogix.py  test_debug.py  test_http.py  test_integration.py  test_manager.py  test_region.py
coralogix/tests/helpers/: __init__.py  case.py
docs/: Configuration.rst  Implementation.rst  Install.rst  conf.py  index.rst  uWSGI.rst
docs/frameworks/: Django.rst  Flask.rst  index.rst
