[bdist_wheel]
universal=0

[tool:pytest]
flake8-ignore = E128 E501
flake8-max-line-length = 100
filterwarnings =
    ignore::DeprecationWarning

[metadata]
name = coralogix_logger
version = 2.0.7
author = Coralogix Ltd.
author-email = info@coralogix.com
summary = Coralogix Python SDK
home-page = http://www.coralogix.com/
requires-dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Manufacturing
    Intended Audience :: Telecommunications Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: Log Analysis
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Networking :: Monitoring
    Topic :: Utilities
license_file = LICENSE
description-file =
    README.rst
    AUTHORS.rst
